# rosneuro_decoder_qda

./: CMakeLists.txt  README.md  package.xml  plugin_decoder_qda.xml
example/: qdaCfg.yaml  test_qda.cpp  test_qda.launch
include/rosneuro_decoder_qda/: Qda.hpp
src/: Qda.cpp
test/: TestQda.cpp  classify_qda_eval.m  classify_qda_example.m  classify_qda_train.m  features.csv  labels.csv  qdaCfg.yaml  test_qda.cpp  test_qda.launch
test/data/: output.csv
