<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_decoder_qda</name>
  <version>1.0.0</version>
  <description>The rosneuro_decoder_qda package</description>

  <maintainer email="paolo@todo.todo">paolo</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <depend>rosneuro_msgs</depend>
  <depend>rosneuro_decoder</depend>
  
  <exec_depend>message_runtime</exec_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>


  <export>
	  <rosneuro_decoder plugin="${prefix}/plugin_decoder_qda.xml"/>
  </export>
</package>
